// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`communications::notifications notifications list expands 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-root"
  >
    <div
      class="makeStyles-notificationsList"
    >
      <div
        class="Alert-root makeStyles-notification Alert-clickAble"
        data-testid="communications__notification"
      >
        <div
          class="Alert-iconWrapper Alert-startIcon"
        >
          <div
            class="BaseIcon-root BaseIcon-root IconMessageIcon-root"
            size="24"
          />
        </div>
        <div
          class="Alert-text"
        >
          notification0
        </div>
        <div
          class="Alert-iconWrapper Alert-endIcon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </div>
      </div>
      <div
        class="Alert-root makeStyles-notification Alert-clickAble"
        data-testid="communications__notification"
      >
        <div
          class="Alert-iconWrapper Alert-startIcon"
        >
          <div
            class="BaseIcon-root BaseIcon-root IconMessageIcon-root"
            size="24"
          />
        </div>
        <div
          class="Alert-text"
        >
          notification1
        </div>
        <div
          class="Alert-iconWrapper Alert-endIcon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </div>
      </div>
      <div
        class="Alert-root makeStyles-notification Alert-clickAble"
        data-testid="communications__notification"
      >
        <div
          class="Alert-iconWrapper Alert-startIcon"
        >
          <div
            class="BaseIcon-root BaseIcon-root IconMessageIcon-root"
            size="24"
          />
        </div>
        <div
          class="Alert-text"
        >
          notification2
        </div>
        <div
          class="Alert-iconWrapper Alert-endIcon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </div>
      </div>
      <div
        class="Alert-root makeStyles-notification Alert-clickAble"
        data-testid="communications__notification"
      >
        <div
          class="Alert-iconWrapper Alert-startIcon"
        >
          <div
            class="BaseIcon-root BaseIcon-root IconMessageIcon-root"
            size="24"
          />
        </div>
        <div
          class="Alert-text"
        >
          notification3
        </div>
        <div
          class="Alert-iconWrapper Alert-endIcon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </div>
      </div>
      <div
        class="Alert-root makeStyles-notification Alert-clickAble"
        data-testid="communications__notification"
      >
        <div
          class="Alert-iconWrapper Alert-startIcon"
        >
          <div
            class="BaseIcon-root BaseIcon-root IconMessageIcon-root"
            size="24"
          />
        </div>
        <div
          class="Alert-text"
        >
          notification4
        </div>
        <div
          class="Alert-iconWrapper Alert-endIcon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`communications::notifications notifications list rendering 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-root"
  >
    <div
      class="Alert-root makeStyles-noNotificationsAlert"
    >
      <div
        class="Alert-iconWrapper Alert-startIcon"
      >
        <div
          class="BaseIcon-root BaseIcon-root Iconwarning-gray-root"
          size="24"
        />
      </div>
      <div
        class="Alert-text"
      >
        Уведомлений пока нет
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`communications::notifications notifications list rendering 2`] = `
<DocumentFragment>
  <div
    class="makeStyles-root"
  >
    <div
      class="makeStyles-notificationsList"
    >
      <div
        class="Alert-root makeStyles-notification Alert-clickAble"
        data-testid="communications__notification"
      >
        <div
          class="Alert-iconWrapper Alert-startIcon"
        >
          <div
            class="BaseIcon-root BaseIcon-root IconMessageIcon-root"
            size="24"
          />
        </div>
        <div
          class="Alert-text"
        >
          notification0
        </div>
        <div
          class="Alert-iconWrapper Alert-endIcon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </div>
      </div>
      <div
        class="Alert-root makeStyles-notification Alert-clickAble"
        data-testid="communications__notification"
      >
        <div
          class="Alert-iconWrapper Alert-startIcon"
        >
          <div
            class="BaseIcon-root BaseIcon-root IconMessageIcon-root"
            size="24"
          />
        </div>
        <div
          class="Alert-text"
        >
          notification1
        </div>
        <div
          class="Alert-iconWrapper Alert-endIcon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </div>
      </div>
      <div
        class="Alert-root makeStyles-notification Alert-clickAble"
        data-testid="communications__notification"
      >
        <div
          class="Alert-iconWrapper Alert-startIcon"
        >
          <div
            class="BaseIcon-root BaseIcon-root IconMessageIcon-root"
            size="24"
          />
        </div>
        <div
          class="Alert-text"
        >
          notification2
        </div>
        <div
          class="Alert-iconWrapper Alert-endIcon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`communications::notifications notifications list rendering 3`] = `
<DocumentFragment>
  <div
    class="makeStyles-root"
  >
    <div
      class="makeStyles-notificationsList"
    >
      <div
        class="Alert-root makeStyles-notification Alert-clickAble"
        data-testid="communications__notification"
      >
        <div
          class="Alert-iconWrapper Alert-startIcon"
        >
          <div
            class="BaseIcon-root BaseIcon-root IconMessageIcon-root"
            size="24"
          />
        </div>
        <div
          class="Alert-text"
        >
          notification0
        </div>
        <div
          class="Alert-iconWrapper Alert-endIcon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </div>
      </div>
      <div
        class="Alert-root makeStyles-notification Alert-clickAble"
        data-testid="communications__notification"
      >
        <div
          class="Alert-iconWrapper Alert-startIcon"
        >
          <div
            class="BaseIcon-root BaseIcon-root IconMessageIcon-root"
            size="24"
          />
        </div>
        <div
          class="Alert-text"
        >
          notification1
        </div>
        <div
          class="Alert-iconWrapper Alert-endIcon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </div>
      </div>
      <div
        class="Alert-root makeStyles-notification Alert-clickAble"
        data-testid="communications__notification"
      >
        <div
          class="Alert-iconWrapper Alert-startIcon"
        >
          <div
            class="BaseIcon-root BaseIcon-root IconMessageIcon-root"
            size="24"
          />
        </div>
        <div
          class="Alert-text"
        >
          notification2
        </div>
        <div
          class="Alert-iconWrapper Alert-endIcon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </div>
      </div>
      <div
        class="Alert-root makeStyles-notification Alert-clickAble"
        data-testid="communications__notification"
      >
        <div
          class="Alert-iconWrapper Alert-startIcon"
        >
          <div
            class="BaseIcon-root BaseIcon-root IconMessageIcon-root"
            size="24"
          />
        </div>
        <div
          class="Alert-text"
        >
          notification3
        </div>
        <div
          class="Alert-iconWrapper Alert-endIcon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </div>
      </div>
      <div
        class="Alert-root makeStyles-notification Alert-clickAble"
        data-testid="communications__notification"
      >
        <div
          class="Alert-iconWrapper Alert-startIcon"
        >
          <div
            class="BaseIcon-root BaseIcon-root IconMessageIcon-root"
            size="24"
          />
        </div>
        <div
          class="Alert-text"
        >
          notification4
        </div>
        <div
          class="Alert-iconWrapper Alert-endIcon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
